--- a/Consultorio/public/css/style.css
+++ b/Consultorio/public/css/style.css
@@ -1,9 +1,9 @@
 /********** Template CSS **********/
 :root {
-    --primary: #009CFF;
-    --light: #F3F6F9;
-    --dark: #191C24;
-    --darki: #6383c6;
+    --primary: #f57c00;
+    --light: #ffffff;
+    --dark: #2c3e50;
+    --darki: #16a085;
 }
 
 .back-to-top {
@@ -82,7 +82,7 @@
     width: 350px;
     height: 100vh;
     overflow-y: auto;
-    background: #6383c6;
+    background: #f57116;
     transition: 0.5s;
     z-index: 999;
 }
@@ -90,7 +90,7 @@
 .content {
     margin-left: 250px;
     min-height: 100vh;
-    background: #282d41;
+    background: #1b1a1a;
     transition: 0.5s;
 }
 
@@ -132,10 +132,10 @@
 /*** Navbar ***/
 .sidebar .navbar .navbar-nav .nav-link {
     padding: 7px 20px;
-    color: #dff3f3;
+    color: #ffffff;
     font-weight: 500;
     font-weight: bold;
-    border-left: 3px solid #77a8ca;
+    border-left: 3px solid #080303;
     border-radius: 0 30px 30px 0;
     outline: none;
 }
@@ -143,7 +143,7 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
-    background: #b7e4de;
+    background: #b3b6b6;
     border-color: var(--primary);
 }
 
@@ -153,7 +153,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #392fc4;
+    background: #55939e;
     border-radius: 40px;
 }
 
@@ -201,7 +201,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #b0bdd8;
+    background: #df7233;
     border-radius: 40px;
 }
 
