--- a/Consultorio/public/css/select2.css
+++ b/Consultorio/public/css/select2.css
@@ -147,7 +147,7 @@
     right: 1px;
     width: 20px; }
     .select2-container--default .select2-selection--single .select2-selection__arrow b {
-      border-color: #888 transparent transparent transparent;
+      border-color: #888888a4 transparent transparent transparent;
       border-style: solid;
       border-width: 5px 4px 0 4px;
       height: 0;
@@ -470,7 +470,7 @@
 
 .select2-container--classic .select2-results__option--highlighted[aria-selected] {
   background-color: #3875d7;
-  color: rgb(175, 8, 8); }
+  color: #af0808; }
 
 .select2-container--classic .select2-results__group {
   cursor: default;
